<resources>
    <string name="app_name">TodoGenius</string>
    <string name="notes">Notes</string>
    <string name="enter_the_description">Pour Your Thoughts Here</string>
    <string name="enter_the_title">Capture Your Sparkling Idea</string>
    <string name="edit_note">Edit Your Note</string>
    <string name="add_note">Add Your Note</string>
    <string name="enter_the_time">enter_the_time</string>
    <string name="enter_the_date">enter_the_date</string>
</resources>